--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,8 +52,12 @@ steps:
     secureFile: 'id_rsa.pub'
 
 - script: 
-  mkdir -p ~/.ssh
-  cp $
+    mkdir -p ~/.ssh
+    cp $(Agent.TempDirectory)/id_rsa.pub ~/.ssh/id_rsa.pub
+    cp $(Agent.TempDirectory)/id_rsa ~/.ssh/id_rsa
+    chmod 640 ~/.ssh/id_rsa.pub
+    chmod 600 ~/.ssh/id_rsa
+  displayName: 'setup sshkey'
 
 - task: TerraformTaskV4@4
   displayName: 'Terraform Validate'
