Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,8 +68,12 @@ steps:
     provider: 'azurerm'
     command: 'validate'
 - script: 
-    echo "Ensure apache-install is available"
+    echo "Current Directory:"
+    pwd
+    echo "List Files in /tmp/"
     ls -l /tmp/
+    echo "Ensure apache-install is available:"
+    ls -l /tmp/apache-install.sh
   displayName: 'check apache install script'
 
 
